--- a/alert-service/Dockerfile
+++ b/alert-service/Dockerfile
@@ -8,5 +8,4 @@ RUN pip install -r requirements.txt
 COPY ./app ./app
 ENV PYTHONPATH=/app
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001", "--log-level", "debug"]
-
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
